Implementing orders REST API. Adding tagsSorter in application.properties
